# Philosophers

./: .gitignore  CMakeLists.txt
philo/: Makefile
philo/include/: philo.h  philosophers.h
philo/src/: error.c  init_input.c  init_philo_struct.c  main.c  monitor.c  parse_arg.c  philo.c  philo_utils.c  start_monitor.c  start_philo.c  utils.c
philo/src/libft_func/: ft_atoi.c  ft_itoa.c  ft_strlen.c  ft_strncmp.c
philo_bonus/: Makefile
philo_bonus/include/: philo_bonus.h
philo_bonus/src/: init_all_data.c  init_philo_struct.c  main.c  monitor.c  parse_arg.c  philo_utils.c  start_philo.c  utils.c
philo_bonus/src/libft_func/: ft_atoi.c  ft_itoa.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c
